Fix text-alignment on hero section

--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
     overflow: hidden;
     color: var(--header-text);
     margin-bottom: 0;
+    text-align: center;
 }
 
 .hero-section::before {
